added missing path in workflow
Signed-off-by: Pragalva Sapkota <pragalva.sapkota@deerwalk.edu.np>

--- a/.github/workflows/publish-allure-report.yml
+++ b/.github/workflows/publish-allure-report.yml
@@ -8,6 +8,7 @@ on:
       - "allure-results/**"
       - "kanvas-results/**"
       - "meshery-results/**"
+      - "mesheryctl-results/**"
       - "remote-provider-results/**"
       - "allurerc.mjs"
   workflow_dispatch:
